# pinpatr

./: Cargo.toml  README.md
examples/: basic.rs
src/: cli.rs  error.rs  lib.rs  main.rs
src/cli/: format.rs  syllable.rs  token.rs
tests/: test.rs
