[package]
name = "pinpatr"
version = "1.6.0"
edition = "2021"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.29", features = ["derive"] }
indexmap = "2.7.1"
lazy_static = "1.5.0"
phf = { version = "0.11.3", features = ["macros"] }
regex = "1.11.1"
unicode-normalization = "0.1.24"
